--- a/gb/24/1/17/n14160301.md
+++ b/gb/24/1/17/n14160301.md
@@ -1,54 +1,55 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>消防服务重大失误 墨尔本女子家中被烧死</h2>
 <h6></h6>
 <hr>
-<p>【大纪元2024年01月17日讯】（大纪元记者李凡真<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>编译报导）据《太阳先驱报》报导，一桩四年前的旧案迎来了审理进展。由于<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E6%9C%8D%E5%8A%A1.md#1">消防服务</a>的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%87%8D%E5%A4%A7%E5%A4%B1%E8%AF%AF.md#1">重大失误</a>，一名坐轮椅的女子在自己米尔公园（Mill Park）的家中被活活烧死。</p>
+<p>【大纪元2024年01月17日讯】（大纪元记者李凡真墨尔本编译报导）据《太阳先驱报》报导，一桩四年前的旧案迎来了审理进展。由于消防服务的重大失误，一名坐轮椅的女子在自己米尔公园（Mill Park）的家中被活活烧死。</p>
 <p>2019年1月17日凌晨2点42分，56岁的独居女子罗杰（Vivianne Rodger）向家庭护理机构的一名工作人员发出警报，称她的“毯子着火了”。但由于“严重”且“完全可以避免”的延误，消防员直到凌晨5点7分才赶到并扑灭大火，此时罗杰位于梅伯里大道（Maybury Drive）的房屋已完全被大火吞没。</p>
 <p>验尸官劳里（Paul Lawrie）日前公布了罗杰死亡的调查结果，称大都会消防队当晚的失误——包括去错了房子——“令人震惊”。闭路电视录像显示，凌晨3点30分左右，一名消防员沿着梅伯里大道行走，经过罗杰女士的家，然后返回消防车并离开。</p>
 <p>在接到罗杰的报警电话后，其护理人员贝尔德（Rikky Baird）告知紧急服务电信管理局（ESTA）接线员，消防队需要前往罗杰位于米尔公园梅伯里大道36号的家。</p>
 <p>然而，接线员告诉消防部门，贝尔德在当晚早些时候曾致电给他们“为另一个地址汇报类似事件”，但事实证明该电话是“误报”。</p>
-<p>此外，当消防员接到第二次<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%81%AB%E7%81%BE.md#1">火灾</a>报警后，搞错了门牌号码而未能抵达正确的地址，“从而错失了营救罗杰女士的机会”，劳里说。</p>
-<p>罗杰的母亲报告说，罗杰经常会吸烟时在床上或椅子上睡着，“掉落或丢弃的烟屑”是最有可能引发<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%81%AB%E7%81%BE.md#1">火灾</a>的原因。</p>
+<p>此外，当消防员接到第二次火灾报警后，搞错了门牌号码而未能抵达正确的地址，“从而错失了营救罗杰女士的机会”，劳里说。</p>
+<p>罗杰的母亲报告说，罗杰经常会吸烟时在床上或椅子上睡着，“掉落或丢弃的烟屑”是最有可能引发火灾的原因。</p>
 <p>2010年，罗杰中风并遭受后天性脑损伤，导致她左侧身体瘫痪。</p>
 <p>验尸官还发现，罗杰的个人报警器并未与烟雾报警器相连，并向国家残障保险计划（NDIS）服务提供商提出了此事的重要性。</p>
 <p>他还建议维州消防局推出政策和程序，以确保消防员在火灾并不明显的情况下采取适当措施来确定正确的火灾发生地点。</p>
 <p>责任编辑：李欣然</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/17/n14160229.md#1">Costco将关闭墨尔本一门店 顾客哗然</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/17/n14160055.md#1">喜剧式播报火车信息 墨尔本站台播音员爆红</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159373.md#1">AMP经济学家：今年投资者面临的4大忧心事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159158.md#1">Kmart澳洲总裁在美发声 冀Anko品牌打入美国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159157.md#1">澳科学家捕获超灵敏射电图像 恒星球状星团</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159279.md#1">全澳首例 维州男行纳粹军礼或被监禁一年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159159.md#1">澳裔丹麦新王后玛丽公开亮相 展现时尚风采</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159230.md#1">监管机构拟对超市欺骗性定价诉诸法律行动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159246.md#1">澳国防部签署合同 明年开始生产远程导弹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307142.md#1">《国有器官》震撼墨尔本观众：制止中共行恶</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308545.md#1">移民大增 墨尔本地产兴起印度风</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308544.md#1">防止浪费 墨尔本修理旧物倡议受欢迎</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308542.md#1">儿患疑难病 墨尔本母亲为研究筹款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307384.md#1">墨尔本航班飞行员毒驾 监管机构未公开</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307378.md#1">维州现“租房警察” 处罚违规房东</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307376.md#1">墨市员工拒为犹太报纸压膜 Officeworks公司道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/2/n10824920.md#1">【寓教于乐】墨尔本家长和孩子们的最爱</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304137.md#1">【墨尔本快讯】市议会邀请您参与问卷调查！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306415.md#1">澳洲警告北京不要胁迫太平洋岛国</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/6/15/n10486558.md#1" target="_blank">【还原史实】国共内战中被欺骗的美国政府</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/1/29/n10097243.md#1" target="_blank">大学教授炼法轮功身心受益 反迫害控告江泽民</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/22/n10994378.md#1" target="_blank">陆文：迫害佛法最终害了自己</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/21/n11400032.md#1" target="_blank">澳立法会议员：公开直接制止中共迫害法轮功</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/12/n14156773.md#1">水母状UFO现身伊拉克美军基地 画面曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/12/n14156765.md#1">留意！为何甲辰龙年起连续五年没有“年三十”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/10/n14155162.md#1">蒋经国对共产党的认识</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/12/n14156294.md#1">【未解之谜】美国迈阿密购物中心惊现“大灰人”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/25/n14143326.md#1">【古道人生】过世的伴侣转生为富少年回来相助</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159413.md#1">【全球新闻】世卫总干事：上月近万人新冠病亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/17/n14159899.md#1">【菁英论坛】红海危机和地缘政治大乱斗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/17/n14159935.md#1">【新唐人快报】瑙鲁与台湾断交 传北京花1亿美元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/15/n14158594.md#1">财新揭公安酷刑致死案报导被删 网络热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/15/n14158832.md#1">苹果在中国大陆罕见对iPhone 15打折</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/15/n14159108.md#1">王家卫30集《繁花》拍3年 胡歌片酬曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/15/n14159148.md#1">面相大师12年前预言“赖清德有总统命”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/14/n14158412.md#1">【人物真相】周海媚一生何求</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159828.md#1">刀郎获赔7.5万元 女歌手降央卓玛被判侵权</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/15/n14159091.md#1">击败梁朝伟 吴慷仁荣膺香港影评学会大奖影帝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">Dream On Me木质可调节 宝宝彩色餐椅 42%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/12/n14156286.md#1">每日必吃3类食物 日87岁执业医师分享健康秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/2/n14149082.md#1">膝盖痛走不了？5个简单动作保养、自愈膝关节</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159463.md#1">调查：全球最准时的机场和航空公司排名</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/15/n14158883.md#1">空服员的暗号知多少？ 让行家告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300810.md#1">【未解之谜】日本最强预言：三千世界面临大清洗 人神历劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301175.md#1">一两黄金一块砖 紫禁城“金砖”怎地这么高贵？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/18/n14293177.md#1">《货郎图》——有趣的故事传承</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300734.md#1">目睹临终病患与亡者对话 护士质疑无神论</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14303947.md#1">【菁英论坛】中共进入“治脸”时代</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304257.md#1">【时事金扫描】瓦格纳现委国 马杜罗约架马斯克</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303886.md#1">【新闻欣视角】中共两战区司令突换人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303843.md#1">网曝湖南挂反共横幅者更多细节</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304119.md#1">【更新】2024年巴黎奥运奖牌榜 8月3日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303894.md#1">携妻女游日本 胡歌与女儿互动同框首曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304255.md#1">《心的温度》上映首日 2名观众 票房仅91元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304297.md#1">郑中基突开除经理人 宣布：下月高雄唱完后离开</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304294.md#1">知名摇滚天团“史密斯飞船”巡演中宣布退休</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304239.md#1">昆凌分享7岁儿一句话 曝周杰伦在家中地位</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279677.md#1">抢救落发  三招丰厚发量</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300801.md#1">研究：常见家用化学品会攻击关键脑细胞</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304411.md#1">感觉脚痛或疲劳？ 可能是你的凉鞋害的</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302344.md#1">纳豆抗衰老、防血栓 五种人慎食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302515.md#1">有多少食品添加剂不列在成分标签中？</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/1/17/n14160301.htm">消防服务重大失误 墨尔本女子家中被烧死</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/1/17/n14160301.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/1/17/n14160301.htm">消防服务重大失误 墨尔本女子家中被烧死</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/1/17/n14160301.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
