--- a/gb/24/8/10/n14308673.md
+++ b/gb/24/8/10/n14308673.md
@@ -138,7 +138,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307761.md#1">奥运台湾代表团拜会巴黎勒瓦卢瓦市府</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307802.md#1">奥运冲浪比赛有“鲸喜” 鲸鱼跃出海面抢镜</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/29/n11010920.md#1" target="_blank">共产暴政录：“六四屠城”的几个问题</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/6/9/n7982398.md#1" target="_blank">大陆教师：婆婆神奇经历改变我的世界观</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/25/n10247979.md#1" target="_blank">中共淫乱的前生今世（6）淫乱大看台</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/29/n10261167.md#1" target="_blank">一位加拿大生物学家无止境的神奇之路</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300810.md#1">【未解之谜】日本最强预言：三千世界面临大清洗 人神历劫</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301175.md#1">一两黄金一块砖 紫禁城“金砖”怎地这么高贵？</a></li>
